fixed spacing so no scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ h1 {
   font-size: 48px;
   margin: 2%;
   margin-bottom: 0;
+  margin-top: 5px;
 }
 
 h2 {
@@ -74,6 +75,7 @@ h4 {
   width: 225px;
   background-color: blue;
 }
+
 #reset-button {
   background-color: black;
   border: 1px solid white;
@@ -83,6 +85,7 @@ h4 {
   margin: 1%;
   text-align: center;
   width: 456px;
+  margin-bottom: 0;
 }
 
 #reset-button:hover {
